# uk-grid-carbon-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  Makefile 2  README 2.md  README.md  pyproject.toml
.claude/agent-memory/energy-dataviz-webdev/: MEMORY.md  project_choropleth_library.md  project_dashboard_stack.md  project_dashboard_tests.md  project_data_access_pattern.md  project_hosting_decision.md  project_streamlit_cloud_gotchas.md  user_profile.md
.claude/agent-memory/renewable-data-engineer/: MEMORY.md  feedback_naming_convention.md  project_geo_layer.md  project_repo_structure.md  project_snowflake_adoption.md
.claude/agent-memory/uk-renewable-energy-strategist/: MEMORY.md  project_portfolio_project.md  reference_data_sources.md  user_profile.md
.claude/agents/: dagster-snowflake-engineer.md  energy-dataviz-webdev.md  project-orchestrator.md  renewable-data-engineer.md  uk-renewable-energy-strategist.md
.github/workflows/: ci.yml  deploy.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: _marts__models.yml  dim_dno_region.sql  fact_carbon_intensity_hourly.sql  fact_regional_carbon_intensity.sql
dbt/models/staging/: _staging__models.yml  stg_carbon_intensity__national.sql  stg_carbon_intensity__regional.sql  stg_neso__dno_polygons.sql
dbt/seeds/: _seeds__models.yml  dno_region_mapping.csv
docs/: architecture.md
infra/: droplet-bootstrap.sh  snowflake_init.sql  staging-bootstrap.sh
infra/nginx/: energy-project.ridol.fo.conf  staging.energy-project.ridol.fo.conf
src/uk_grid/: __init__.py  definitions.py  resources.py
src/uk_grid/assets/: __init__.py  carbon_intensity.py  grid_eso.py  met_office.py  neso_geo.py
src/uk_grid/dashboard/: app.py
tests/: test_carbon_intensity_asset.py  test_carbon_intensity_parse.py  test_carbon_intensity_regional_parse.py  test_smoke.py
tests/fixtures/: regional_response.json
web/: .dockerignore  .env.example  .env.staging.example  Dockerfile  README.md  conftest.py  docker-compose.override.yml.example  docker-compose.staging.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
web/apps/blog/: loader.py  tests.py  urls.py  views.py
web/apps/core/: snowflake.py  test_components.py  tests.py  urls.py  views.py
web/apps/intensity/: apps.py  charts.py  data.py  tests.py  urls.py  views.py
web/content/blog/: 01-building-uk-grid-carbon-intelligence.md  02-why-dno-region-reconciliation-matters.md
web/static/tailwind/: input.css  package-lock.json  package.json  tailwind.config.js
web/templates/: base.html
web/templates/blog/: detail.html  index.html
web/templates/components/: badge.html  base_layout.html  card.html  error_fragment.html  hero.html  loading_fragment.html  map_container.html  metric_tile.html  nav_link.html  post_meta.html  theme_toggle.html
web/templates/core/: home.html
web/templates/cotton/: badge.html  base_layout.html  card.html  error_fragment.html  hero.html  loading-fragment.html  map-container.html  metric-tile.html  nav-link.html  post-meta.html  theme_toggle.html
web/templates/intensity/: national.html
web/uk_grid_site/: asgi.py  settings.py  urls.py  wsgi.py
