[project]
name = "uk-grid-carbon-pipeline"
version = "0.1.0"
description = "Production-grade Dagster + dbt pipeline for UK electricity grid carbon intensity data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "William Josid Ridolfo", email = "josid.ridolfo@gmail.com" }]

dependencies = [
    # Orchestration — pinned to last known-working set on Python 3.13
    "dagster>=1.8,<1.14",
    "dagster-webserver>=1.8,<1.14",
    "dagster-dbt>=0.24,<0.30",
    "dagster-snowflake>=0.24,<0.30",
    "dagster-snowflake-pandas>=0.24,<0.30",

    # Transformation
    "dbt-core>=1.8,<1.12",
    "dbt-snowflake>=1.8,<1.12",

    # Data — snowflake-connector-python pinned to 3.x; the 4.x line shipped with
    # a packaging bug (missing externals_utils/externals_setup.py) on some wheels.
    "snowflake-connector-python[pandas]>=3.14,<4.0",
    "pandas>=2.2",
    "pyarrow>=16",
    "shapely>=2.0",
    "pyproj>=3.6",

    # HTTP + retries
    "httpx>=0.27",
    "tenacity>=9.0",

    # Config + validation
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # Dashboard
    "streamlit>=1.36",
    "altair>=5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_grid"]

[tool.hatch.build.targets.wheel.sources]
"src/uk_grid" = "uk_grid"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "N", "SIM"]
ignore = ["E501"] # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires live external services (Carbon Intensity API, live Snowflake) — excluded from credential-free CI",
]

[tool.dagster]
module_name = "uk_grid.definitions"
