[project]
name = "energy-project-web"
version = "0.1.0"
description = "Django web frontend for energy-project.ridol.fo — UK Grid Carbon Intelligence dashboard."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "William Josid Ridolfo", email = "josid.ridolfo@gmail.com" }]

dependencies = [
    "django>=5.0,<6.0",
    "gunicorn>=21",
    "django-environ>=0.11",
    "django-htmx>=1.17",
    "django-markdownify>=0.9",
    "python-frontmatter>=1.1",
    # snowflake-connector-python pinned to 3.x; 4.x has a packaging bug
    # (missing externals_utils/externals_setup.py on some wheels).
    # See parent pyproject.toml for full explanation.
    "django-cotton>=1.5",
    "snowflake-connector-python[pandas]>=3.14,<4.0",
    "psycopg[binary]>=3.1",
    "plotly>=5.20",
    # whitenoise serves collectstatic'd files without an extra nginx alias
    "whitenoise>=6.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "pytest-snapshot>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uk_grid_site", "apps"]
